--- a/yj-base/WebRoot/WEB-INF/web.xml
+++ b/yj-base/WebRoot/WEB-INF/web.xml
@@ -2,18 +2,17 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
 
 	     
-    <context-param>
-    	<param-name>contextConfigLocation</param-name>
-    	<param-value>/WEB-INF/classes/spring/applicationContext-*.xml</param-value>
-    </context-param>
-    
     <listener>
     	<listener-class>
     		org.springframework.web.context.ContextLoaderListener
     	</listener-class>
     </listener>
     
-    
+    <context-param>
+    	<param-name>contextConfigLocation</param-name>
+    	<param-value>classpath:spring/applicationContext-*.xml</param-value>
+    </context-param>
+       
     <servlet>
         <servlet-name>mvc-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
