--- a/yjspringboot/pom.xml
+++ b/yjspringboot/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.project</groupId>
-  <artifactId>yj-springboot</artifactId>
+  <artifactId>greenhouse</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>yj-springboot Maven Webapp</name>
+  <name>greenhouse Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
   <properties>
